--- a/src/index.css
+++ b/src/index.css
@@ -7,6 +7,7 @@ html, body, #root {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  background-color: #fafbfc;
 }
 
 * {
